[feature](feishu|chat) Add Feishu bot integration with user mapping and message routing
- Add feishu/api and feishu/server modules with dual connection mode (webhook + WebSocket)
- Implement FeishuBotService orchestrator, FeishuUserMappingService (auto-match by
  employeeId/email/mobile with PENDING approval flow), SuperSonicApiClient
- Add 7 message handlers routed by FeishuMessageRouter (Query/Export/Help/TemplateList/
  History/Preview/UseAgent)
- Add FeishuMeterBinder + FeishuMetricsAspect for query latency and success rate tracking
- Extend ChatMapper/ChatManageService with chatName filtering for session reuse
- Add V20-V22 Flyway migrations for feishu tables (mysql + postgresql)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>